[project]
name = "langgraph-advance-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.25",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "typing-extensions>=4.15.0",
]
